# marty_hex_test

./: .set_sln.bat  .set_sln_exes.bat  CMakeLists.txt  README.md  _start_msvc2017.bat  _start_msvc2019.bat  _start_msvc2022.bat  _start_msvc2026.bat  set_sln.bat
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat  libs.list
_src/marty-hex-test/: marty-hex-test-001.cpp  marty-hex.cpp
_src/umba-hex/: AppVerConfig.h  ArgParser.h  marty-hex-test-001.cpp  marty-hex-test-002.cpp  marty-hex-test-003.cpp  marty-hex-test-004.cpp  marty-hex-test-005.cpp  marty-hex-test-006.cpp  marty-hex-test-007.cpp  marty-hex-test-008.cpp  marty-hex-test-009.cpp  marty-hex-test-010.cpp  marty-hex-test-011.cpp  marty-hex-test-012.cpp  marty-hex-test-013.cpp  marty-hex-test-014.cpp  marty-hex-test-015.cpp  marty-hex-test-016.cpp  marty-hex-test-017.cpp  marty-hex-test-018.cpp  marty-hex-test-019.cpp  marty-hex-test-020.cpp  marty-hex-test-021.cpp  marty-hex-test-022.cpp  marty-hex-test-023.cpp  marty-hex-test-024.cpp  marty-hex-test-025.cpp  marty-hex-test-026.cpp  marty-hex-test-027.cpp  marty-hex-test-028.cpp  marty-hex-test-029.cpp  marty-hex-test-030.cpp  marty-hex-test-031.cpp  marty-hex-test-032.cpp  marty-hex-test-033.cpp  marty-hex-test-034.cpp  marty-hex-test-035.cpp  marty-hex-test-036.cpp  marty-hex-test-037.cpp  marty-hex-test-tpl.cpp  (+6 more)
_src/umba-hex/marty_format_examples/: mfmt_example_01.cpp  mfmt_example_02.cpp  mfmt_example_03.cpp  mfmt_example_03_generate.cpp  mfmt_example_04.cpp  mfmt_example_04_generate.cpp  mfmt_example_05.cpp  mfmt_example_06.cpp  mfmt_example_07.cpp  mfmt_example_08.cpp  mfmt_example_09.cpp
_src/umba-hex/std_format_tests/: gcvt_test.cpp  std_to_chars_tests.cpp
doc/: Index.md  Исходные тексты.md  Списки замечаний в исходном коде.md
doc.3dp/: links.txt
doc.drafts/: links.txt  mermaid_test.md
doc.notes/: CTAD.md  constexpr_data.md
doc/_md/: _found-attentions.md  _found-notes.md  _found-see-also.md  _found-todos.md  entry_points.md_  sources-stat-by-percent.md_  sources-stat-by-percent.txt  sources-stat.md_  sources-stat.txt  sources_brief.md_
tests/: .find_test_exe.bat  .gitignore  .set_config.bat  01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  14.csv  15.csv  16.csv  17.csv  18.csv  _clear_all.bat  _clear_logs.bat  _run_all_tests.bat  excel_test01.xls  excel_test01_mac.csv  marty-hex-test-001.bat  marty-hex-test-002.bat  marty-hex-test-003.bat  marty-hex-test-004.bat  marty-hex-test-005.bat  marty-hex-test-006.bat  marty-hex-test-007.bat  marty-hex-test-008.bat  marty-hex-test-009.bat  marty-hex-test-010.bat  marty-hex-test-011.bat  marty-hex-test-012.bat  marty-hex-test-013.bat  marty-hex-test-014.bat  marty-hex-test-015.bat  marty-hex-test-016.bat  (+28 more)
tests/hex/: 01.hex  02.hex  03.hex  04.hex  05.hex  _clr_hex.bat
tests/layouts/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  22_values.txt  22_with_style.txt  23.txt  24.txt  25.txt
tests/test_bat/: bat-read-lines-n-split.md  libs.list  show_list_01.bat
tests/usketch/: lang-def.txt
